# V2

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  gulpfile.js  manage.py  package.json  pyproject.toml  requirements.txt
zorexsalvo/home/templates/home/: home_page.html
zorexsalvo/settings/: base.py
zorexsalvo/templates/: base.html
zorexsalvo/zorexsalvo/: wsgi.py
zorexsalvo/zorexsalvo/settings/: dev.py
