[tool.poetry]
name = "zorexsalvo"
version = "0.1.0"
description = ""
authors = ["Zorex Salvo <zorexsalvo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wagtail = "^2.8.1"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
